--- a/client/src/components/FilterBar/FilterBar.css
+++ b/client/src/components/FilterBar/FilterBar.css
@@ -199,7 +199,7 @@
   width: 50%;
   background-color: var(--orange2);
   border: 0;
-  font-size: 1.2rem;
+  font-size: 1.4rem;
   border-radius: 5px;
 
   &:hover {
